# docker-dns

./: .gitignore  Dockerfile  README.md  Taskfile.yml  dockerdns  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
dockerns/: app.py  common.py  config.py  model.py  tables.py
dockerns/output/: embedded.py
dockerns/source/: cont_base.py
examples/simple/: README.md  docker-compose.yaml
examples/simple/config/: config.yml
lib/: tables.py
lib/output/: embedded.py
lib/source/: cont_base.py
